# implementing-webhooks

./: .gitignore  README.md  pyproject.toml
web/: db.sqlite3
web/apps/api/: mixins.py  serializers.py  urls.py
web/apps/api/views/: auth.py
web/apps/common/: admin.py  converters.py  filters.py  models.py  urls.py  utils.py
web/apps/common/migrations/: 0001_initial.py
web/apps/users/: models.py  urls.py
web/apps/users/migrations/: 0001_initial.py
web/apps/webhooks/: models.py  tests.py  urls.py  views.py
web/apps/webhooks/migrations/: 0001_initial.py
web/config/: asgi.py  settings.py  urls.py  wsgi.py
